# vader-sentiment-rust

./: .gitignore  Cargo.toml  MIT LICENSE  README.md  READ_ME.md
src/: demo.rs  lib.rs  main.rs  tests.rs  utils.rs
