[package]
name = "vader_sentiment"
version = "0.1.0"
authors = ["Chris <chriswong21@berkeley.edu>"]
license = "MIT"
description = "Bindings for Rust from the original Python VaderSentiment analysis tool."
repository = "https://github.com/ckw017/vader-sentiment-rust"
documentation = "https://docs.rs/vader_sentiment"

[dependencies]
regex = "1"
maplit = "1.0.1"
lazy_static = "1.1.0"
