[package]
name = "vader_sentiment"
version = "0.1.0"
authors = ["Chris <chriswong21@berkeley.edu>"]
license = "MIT"
description = "Bindings for Rust from the original Python VaderSentiment analysis tool."
repository = "https://github.com/ckw017/vader-sentiment-rust"
documentation = "https://docs.rs/vader_sentiment"

[dependencies]
regex = "1.3.1"
maplit = "1.0.2"
lazy_static = "1.4.0"
unicase = "2.6.0"
